src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>KS_Actividad__c</fullName>
        <label>Actividad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Actividad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Apellidos_contacto__c</fullName>
        <label>Apellidos (contacto)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Aprobado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Asociacion__c</fullName>
        <label>Asociación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Asociacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_BillingCity_Diff__c</fullName>
        <label>Billing City Difference</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_BillingCity__c</fullName>
        <label>Custom Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_BillingPostalCode_Diff__c</fullName>
        <label>Billing Postal Code Difference</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_BillingPostalCode__c</fullName>
        <label>Custom Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_BillingStreet_Complete_Diff__c</fullName>
        <label>Billing Street Complete Difference</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_BillingStreet_Diff__c</fullName>
        <label>Billing Street Difference</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_BillingStreet__c</fullName>
        <label>Custom Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_CIF__c</fullName>
        <label>CIF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_CP_length__c</fullName>
        <formula>LEN( BillingPostalCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_C_digo_Postal__c</fullName>
        <label>Código Postal</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Calle__c</fullName>
        <label>Calle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Canal_SAP__c</fullName>
        <label>Canal SAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Canal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Ciudad__c</fullName>
        <label>Ciudad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_CloudExplorer2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para borrar una vez concluidas las pruebas de la herramienta merge</description>
        <label>CloudExplorer2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_CloudExplorer3__c</fullName>
        <description>Campo a eliminar tras las fusiones</description>
        <label>CloudExplorer3</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_CloudExplorer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CloudExplorer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Codigo_CNAE__c</fullName>
        <label>Código CNAE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Codigo_CNAE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Comentarios_SIMON__c</fullName>
        <label>Comentarios SIMON</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KS_CountOC_FL31__c</fullName>
        <label>CountOC-FL31</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_CountOC_SI10__c</fullName>
        <label>CountOC-SI10</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_CountOC__c</fullName>
        <label>CountOC</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Descriptivo_Cuenta__c</fullName>
        <formula>Name&amp;&quot; - SAP: &quot;&amp; KS_Id_SAP__c&amp;&quot; - &quot;&amp;ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descriptivo Cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Distribuidor_Generico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribuidor Generico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>KS_Email_propietario__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Epigrafe_CNAE__c</fullName>
        <label>Epígrafe CNAE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Epigrafe_CNAE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Estado__c</fullName>
        <defaultValue>(&quot;Activo&quot;)</defaultValue>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activo</fullName>
                    <default>true</default>
                    <label>Activo</label>
                </value>
                <value>
                    <fullName>Pasivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Estado_candidato__c</fullName>
        <label>Etapa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Estado_Candidato</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Estado_o_Provincia__c</fullName>
        <label>Estado o Provincia</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Estructura_organizativa__c</fullName>
        <label>Estructura organizativa</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Estructura_organizativa</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Formato_comercial__c</fullName>
        <label>Alcance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Formato_Comercial</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Grupo_de_ctas_deudor__c</fullName>
        <label>Grupo de ctas. deudor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Grupo_de_ctas_deudor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_ID_Personal__c</fullName>
        <formula>Owner.KS_IDSAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Personal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Id_CRM__c</fullName>
        <externalId>true</externalId>
        <label>Id CRM</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Id_Cibor__c</fullName>
        <externalId>true</externalId>
        <label>Id Cibor</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Id_SAP__c</fullName>
        <externalId>true</externalId>
        <label>Id SAP</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_Id_Salesforce__c</fullName>
        <displayFormat>ID-{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Id Salesforce</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>KS_Idioma__c</fullName>
        <label>Idioma</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Idiomas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Inactivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Infraestructuras_Servicios_de_valor__c</fullName>
        <label>Infraestructuras/Servicios de valor añad</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Infraestructuras</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Levenshtein_Distance__c</fullName>
        <label>Levenshtein Distance</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_N_de_Instalaciones__c</fullName>
        <label>Nº de Instalaciones</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Numero_Instalaciones</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_N_de_telefono_2__c</fullName>
        <label>Nº de telefono 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>KS_N_de_telefono_3__c</fullName>
        <label>Nº de telefono 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>KS_N_identificacion_fiscal_suplementario__c</fullName>
        <label>Nº identificación fiscal suplementario</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_N_m_portal_piso_puerta_y_resto_de_di__c</fullName>
        <label>Núm, portal, piso, puerta y resto domici</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_2__c</fullName>
        <label>Nombre Fiscal</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_contacto__c</fullName>
        <label>Nombre (contacto)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Numero_de_identificacion_fiscal_1__c</fullName>
        <label>NIF</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_OC_Fluvia_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OC Fluvia Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_OC_Fluvia_Nacional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OC Fluvia Nacional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_OC_Simon_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OC Simon Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_OC_Simon_Nacional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OC Simon Nacional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_Ventas__c</fullName>
        <label>Marcas comerciales</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Organizaciones_de_cuentas__c</fullName>
        <label>Organizaciones de cuentas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Pa_s__c</fullName>
        <label>País</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Pais__c</fullName>
        <label>País</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Codigo_Pais</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Pertenece_a_Asociacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pertenece a Asociación</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Asociaciones</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Peticion_borrado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Petición de borrado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Producto__c</fullName>
        <label>Producto</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Producto</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Propietario_fx__c</fullName>
        <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Responsable_FL31__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable FLUVIA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UsuariosFL31</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Responsable_IE20__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable LIGHTING</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UsuariosIE20</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Responsable_SI10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable SIMON</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UsuariosSI10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Scoring_Actividad__c</fullName>
        <label>Scoring Actividad Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Scoring</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Scoring_CI__c</fullName>
        <label>Scoring - CI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Scoring_AD</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Scoring_Negocio__c</fullName>
        <label>Scoring Negocio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Scoring</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Sector_SAP__c</fullName>
        <label>Sector SAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Sector__c</fullName>
        <label>Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Servicios__c</fullName>
        <label>Servicios</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Servicios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_ShippingCity_Diff__c</fullName>
        <label>Shipping City Difference</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_ShippingCity__c</fullName>
        <label>Custom Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_ShippingPostalCode_Diff__c</fullName>
        <label>Shipping Postal Code Difference</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_ShippingPostalCode__c</fullName>
        <label>Custom Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_ShippingStreet_Complete_Diff__c</fullName>
        <label>Shipping Street Complete Difference</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_ShippingStreet_Diff__c</fullName>
        <label>Shipping Street Difference</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_ShippingStreet__c</fullName>
        <label>Custom Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Subactividad__c</fullName>
        <label>Subactividad</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Subactividad</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_venta__c</fullName>
        <label>Tipo de venta</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_de_venta</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tipo_de_via__c</fullName>
        <label>Tipo de via</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_via</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tipo_empresa__c</fullName>
        <label>Tipo empresa M</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Tipo_Empresa</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Tipo_empresa_single__c</fullName>
        <label>Tipo empresa S</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_Empresa</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Trabaja_con_Simon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trabaja con Simon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Ubicacion__c</fullName>
        <label>Ubicación</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Actividad__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Ubicacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_id_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>id 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_largoId__c</fullName>
        <formula>LEN( KS_Id_Salesforce__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>largoId</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_recordType_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Tipo de registro (Name)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lista_Global__c</fullName>
        <label>Lista Global</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lista_test</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_BANT__c</fullName>
        <label>BANT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SI_CalidadDireccion__c</fullName>
        <label>Calidad Dirección</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ok</fullName>
                    <default>true</default>
                    <label>Ok</label>
                </value>
                <value>
                    <fullName>Rechazo Postal</fullName>
                </value>
                <value>
                    <fullName>A Revisar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Causa_Pasivado__c</fullName>
        <label>Causa Pasivado</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Estado__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fuera de target</fullName>
                </value>
                <value>
                    <fullName>Pasivado permanentemente</fullName>
                </value>
                <value>
                    <fullName>Pide baja de la BBDD</fullName>
                </value>
                <value>
                    <fullName>Sin actividad o trabajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Descripcion_proyecto_cuenta__c</fullName>
        <label>Descripción proyecto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SI_Email_Cuenta__c</fullName>
        <label>Email Cuenta</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SI_EstadoDuplicado__c</fullName>
        <label>Estado Duplicado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No duplicado</fullName>
                </value>
                <value>
                    <fullName>Posible Duplicado</fullName>
                </value>
                <value>
                    <fullName>Duplicado 100%</fullName>
                </value>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Mail_Validado__c</fullName>
        <label>Mail Válido</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Scoring_IF_Simon__c</fullName>
        <label>Scoring IF Simon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CB</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_address_old__c</fullName>
        <description>normalización de los campos de dirección con Tassis</description>
        <label>address_old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>KS_Id_SAP__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.KS_Lead</value>
        </filters>
        <label>Todos los Clientes</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>CD_Nodos_Jerarquicos</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>KS_Id_SAP__c</columns>
        <columns>KS_Id_Salesforce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KS_Nodo_Jerarquico</value>
        </filters>
        <label>CD - Nodos Jerarquicos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>CD_Puntos_de_Decision</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>KS_Id_Salesforce__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>KS_Tipo_empresa__c</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KS_Distribuidores_SAP</value>
        </filters>
        <filters>
            <field>KS_Tipo_empresa__c</field>
            <operation>includes</operation>
            <value>Central Compras</value>
        </filters>
        <label>CD- Puntos de Decision</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Asociaciones</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KS_Asociaciones</value>
        </filters>
        <label>Asociaciones</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Clientes_finales</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KS_Clientes_finales</value>
        </filters>
        <label>Clientes finales</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Competidores</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>KS_Canal__c</columns>
        <columns>KS_Actividad__c</columns>
        <columns>KS_Subactividad__c</columns>
        <columns>KS_Sector__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Competidor</value>
        </filters>
        <label>Competidores</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Distribuidores_CRM</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>KS_Id_SAP__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KS_Distribuidores</value>
        </filters>
        <filters>
            <field>KS_Estado__c</field>
            <operation>notEqual</operation>
            <value>Pasivo</value>
        </filters>
        <label>Distribuidores_CRM</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Distribuidores_Genericos</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
        <columns>KS_Id_SAP__c</columns>
        <columns>KS_Organizaciones_de_cuentas__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KS_Distribuidores_SAP</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>DG</value>
        </filters>
        <label>Distribuidores Genéricos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>KS_Distribuidores_SAP</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>KS_Id_SAP__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.KS_Distribuidores_SAP</value>
        </filters>
        <filters>
            <field>KS_Estado__c</field>
            <operation>notEqual</operation>
            <value>Pasivo</value>
        </filters>
        <label>Distribuidores SAP</label>
        <language>es</language>
    </listViews>
</CustomObject>